Fix alignment of frontpage catalogs with the header

--- a/app/styles/frontpage.scss
+++ b/app/styles/frontpage.scss
@@ -3,6 +3,7 @@
 .frontpage {
   display: flex;
   flex-wrap: wrap;
+  margin: 0 -15px;
 }
 
 .frontpage__catalog {
